syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.paris.agreement.models";


message FileReaderRequest
{
  string string_word = 1;
}

message FileReaderResponse
{
  string message = 1;
}

service UploadFileReaderService
{
  rpc fileReader(stream FileReaderRequest) returns (FileReaderResponse);
}
